# python-fastApi-socialAuth

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
app/: database.py  main.py
app/decorators/: user.py
app/enums/: email_subject_keys.py  error_messages.py  response_messages.py  steps.py
app/interfaces/: login.py  response.py
app/middlewares/: validation_exception_handler.py
app/models/: users.py
app/modules/auth/: auth_route.py  auth_service.py
app/modules/auth/schemas/: identify.py  register.py  reset_password.py
app/modules/social_auth/: social_auth_route.py  social_auth_service.py
app/modules/user/: user_model.py  user_route.py  user_service.py
app/modules/user/schemas/: update_password.py  update_profile.py
app/routes/: social_auth.py  users.py
app/schemas/: register.py  reset_password.py  verify_email.py
app/services/: auth_helper.py  email.py
app/templates/: forgot_password.html  password_reset_confirmation.html  registration.html  resend_otp.html  template.html  welcome.html
app/utils/: create_response.py  format_response.py  raise_exception.py  raise_response.py
app/validations/: forgot_password.py  link_account.py  login.py  reset_password.py
